--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/vehicule
+#postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/ombaikamitady
 spring.datasource.username=postgres
 spring.datasource.password=
 
@@ -9,3 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#mongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/ombaikamitady
+spring.mongodb.auto-index.creation=true
