config en ligne

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/ombaikamitady
+spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:46979/railway
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=15CdC*fcEEg5FEC-c*gEc24BgecB5dbF
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #mongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/ombaikamitady
+spring.data.mongodb.uri=mongodb://mongo:553D5c6HdG53D6Ffd166D624bGB3B6dh@roundhouse.proxy.rlwy.net:24741
 spring.mongodb.auto-index.creation=true
