--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #mongoDB
-spring.data.mongodb.uri=mongodb://mongo:553D5c6HdG53D6Ffd166D624bGB3B6dh@roundhouse.proxy.rlwy.net:24741
+spring.data.mongodb.uri=mongodb://mongo:553D5c6HdG53D6Ffd166D624bGB3B6dh@roundhouse.proxy.rlwy.net:24741/test
 spring.mongodb.auto-index.creation=true
