--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.mongodb.auto-index.creation=true
 
 
-spring.data.mongodb.uri=mongodb://mongo:553D5c6HdG53D6Ffd166D624bGB3B6dh@roundhouse.proxy.rlwy.net:24741/test
+spring.data.mongodb.uri=mongodb://mongo:553D5c6HdG53D6Ffd166D624bGB3B6dh@roundhouse.proxy.rlwy.net:24741/ombaikamitady
 spring.mongodb.auto-index.creation=true
 
