--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.mongodb.auto-index.creation=true
 
 
-spring.data.mongodb.uri=mongodb+srv://jonathandry:jonathandry@ombaikamitady.1xhgy3c.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://jonathandry:jonathandry@ombaikamitady.1xhgy3c.mongodb.net/ombaikamitady?retryWrites=true&w=majority
 spring.mongodb.auto-index.creation=true
 
